<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_friends_bump">By bumping phones</string>
    <string name="add_friends_contacts">From contacts</string>
    <string name="add_friends_phone_number">By phone number</string>
    <string name="add_friends_section_broadcastedInvite_more">More</string>
    <string name="add_friends_section_broadcastedInvite_title">From other apps</string>
    <string name="add_friends_title">Add some friends</string>
    <string name="add_friends_username">By username</string>
    <string name="addfriend_button">Add by phone number</string>
    <string name="addfriend_error_blocked">You can’t add this person to your friends</string>
    <string name="addfriend_error_private">This person is in Private mode and can’t be added to your friends</string>
    <string name="addfriend_error_rate_message">You’ve tried to add too many people too fast. Try again later :pray:</string>
    <string name="addfriend_error_rate_title">Slow down</string>
    <string name="addfriend_error_title">Sorry, won’t work :cry:</string>
    <string name="addusername_error_already_friends_subtitle">So popular you can’t keep track of all your friends? :smirk:</string>
    <string name="addusername_error_already_friends_title">Already friends</string>
    <string name="addusername_error_blocked_subtitle">You can’t add this person to your friends.</string>
    <string name="addusername_error_blocked_title">Sorry, buddy</string>
    <string name="addusername_error_generic_title">Something went wrong.</string>
    <string name="addusername_error_private_subtitle">This person is in Private Mode and can’t be added to your friends.</string>
    <string name="addusername_error_private_title">Not so fast dude :no_good::skin-tone-2:</string>
    <string name="addusername_error_rate_subtitle">You tried to add too many people too fast. Go chill out and try again later. :tropical_drink:</string>
    <string name="addusername_error_rate_title">Slow down, tiger.</string>
    <string name="addusername_error_self_subtitle">You can’t add yourself. But if you have an evil twin, tell them to join Zenly.</string>
    <string name="addusername_error_self_title">Ummmm… :smiling_imp:</string>
    <string name="addusername_error_taken_subtitle">Oops, please try something else.</string>
    <string name="addusername_error_taken_title">Username taken</string>
    <string name="addusername_error_toosoon_subtitle">You just changed your username. Go chill out and try again later.</string>
    <string name="addusername_error_toosoon_title">Slow down, tiger</string>
    <string name="addusername_error_unknown_subtitle">You might have just misspelled it. Check the spelling and try again?</string>
    <string name="addusername_error_unknown_title">No such user! :triumph:</string>
    <string name="addusername_placeholder">Username</string>
    <string name="addusername_rate_ban_message">I didn’t want to do it but I warned you…</string>
    <string name="addusername_rate_ban_title">24-hour freeze</string>
    <string name="addusername_rate_limited_message">You added too many friends in the last 24 hours. Try again in a bit.</string>
    <string name="addusername_rate_limited_title">Too much too soon</string>
    <string name="addusername_rate_warning_message">You misspelled too many usernames in the last 24 hours. Any more could lead to a suspension.</string>
    <string name="addusername_rate_warning_title">Warning</string>
    <string name="addusername_success_fun">In the meantime, how about a sandwich?</string>
    <string name="addusername_success_message">But you’ll have to wait for your friend to accept your request.</string>
    <string name="addusername_success_title">It worked!</string>
    <string name="addusername_title">Add by username</string>
    <string name="appIconDialog_button">Got it!</string>
    <string name="appIconDialog_message_shortcut">This is your first app shortcut for your phone’s homescreen. Keep using Zenly to unlock new ones.</string>
    <string name="appIconDialog_title">Classic App Icon</string>
    <string name="app_data_safety_how_long_we_keep_data">https://community.zen.ly/hc/articles/360018061573</string>
    <string name="app_data_safety_what_happens_with_data">https://community.zen.ly/hc/articles/360000714287</string>
    <string name="app_name">Zenly</string>
    <string name="app_settings_faqurl">https://community.zen.ly/hc</string>
    <string name="app_settings_licensesurl_android">https://zen.ly/licenses_android</string>
    <string name="app_settings_privacyurl">https://zen.ly/privacy</string>
    <string name="app_settings_termsurl">https://zen.ly/terms</string>
    <string name="app_signupcode_placeholder">• • • •</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="articles_list_fragment_error_message">Failed to get articles</string>
    <string name="articles_list_fragment_no_articles_found">No articles found</string>
    <string name="ask_request_list_failed_request_message">Message failed</string>
    <string name="asset_statements">[{ \"relation\": [\"delegate_permission/common.handle_all_urls\"], \"target\": { \"namespace\": \"web\", \"site\": \"https://footprints.zen.ly\"} }]</string>
    <string name="banner_broadcastedInvite_title">Get your %1$s friends here</string>
    <string name="banner_phoneSettings_message">Tap to configure your phone</string>
    <string name="banner_phoneSettings_title">Improve your location accuracy</string>
    <string name="banner_ticket_replied_subtitle">Tap to view the message</string>
    <string name="banner_ticket_replied_title">Zenly replied to your message</string>
    <string name="belvedere_dialog_camera">Camera</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="mediapicker_all_photos">All photos</string>
    <string name="mediapicker_permission_storage_button">Allow</string>
    <string name="mediapicker_permission_storage_message">To choose a picture you need to allow Storage access, ok?</string>
    <string name="personalSettings_optoutSuggested_message">Enable this setting if you do not want to appear in the \"You might know them\" lists.\10\10These lists are available in the app and enable friends to find each other on Zenly.</string>
    <string name="personalSettings_optoutSuggested_title">Opt-out of lists of suggestions</string>
    <string name="personalSettings_private_message">Only those in your contacts will be able to add you as a friend.\10\10You will only be able to exchange messages and emojis to people in your phone contacts and your Zenly friends.</string>
    <string name="personalSettings_private_title">Private Mode</string>
    <string name="personalSettings_title">Privacy Settings</string>
    <string name="playservices_troubleshooting_updateNeeded_cta">Update</string>
    <string name="playservices_troubleshooting_updateNeeded_message">You need to update your Google Play Services for Zenly to work.</string>
    <string name="playservices_troubleshooting_updateNeeded_title">Hello there!</string>
    <string name="request_list_empty_start_conversation">START A CONVERSATION</string>
    <string name="request_list_empty_text">Conversations started from this app will be visible here.</string>
    <string name="settings_blocked_empty_subtitle">So far, so good, you haven’t blocked any user on Zenly</string>
    <string name="settings_blocked_empty_title">You haven’t blocked anyone</string>
    <string name="settings_blocked_loadingfail_button">Retry</string>
    <string name="settings_blocked_loadingfail_message">Please check your network settings and try again later.</string>
    <string name="settings_blocked_loadingfail_title">Yikes, I couldn’t load the list</string>
    <string name="settings_blocked_title">Blocked users</string>
    <string name="settings_managenotifications_button_notifycontacts">Get notified when a contact joins Zenly</string>
    <string name="settings_managenotifications_button_subtitle_notifyfriendsabroad">Get notified when your friends are travelling</string>
    <string name="settings_managenotifications_button_title_friendsabroad">Friends Abroad</string>
    <string name="settings_managenotifications_button_title_zenlycontacts">Contacts on Zenly</string>
    <string name="settings_managenotifications_title_manage">Notifications</string>
    <string name="signup_ageform_day_short">DD</string>
    <string name="signup_ageform_month_short">MM</string>
    <string name="signup_ageform_year_short">YYYY</string>
    <string name="support_deletion_confirmation_subtitle">What is going to happen:</string>
    <string name="support_deletion_confirmation_title">Are you really sure?</string>
    <string name="support_deletion_confirmation_title_ko">I changed my mind</string>
    <string name="support_deletion_confirmation_title_ok">Yes, I’m sure</string>
    <string name="support_places_empty_button">Got it!</string>
    <string name="support_places_empty_subtitle">The places icons will automatically appear on the map when you’re in one of your places.</string>
    <string name="support_places_empty_title">Give me some time to work some magic.</string>
    <string name="support_places_main_title">Your places</string>
    <string name="z_track3exp1var1_dialog_subtitle_battery">How much battery do they have?</string>
    <string name="z_track3exp1var1_dialog_subtitle_hangout">Who’s hanging out?</string>
    <string name="z_track3exp1var1_dialog_subtitle_speed">How fast are they going?</string>
    <string name="z_track3exp1var1_dialog_subtitle_tots">How long have they been where they are?</string>
    <string name="zs_general_referrer_logo_label_accessibility">Zendesk</string>
</resources>