<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="0x7f0800c3" android:id="@+id/crop_image_menu_rotate_left" android:visible="false" android:title="@string/crop_image_menu_rotate_left" app:showAsAction="ifRoom"/>
    <item android:icon="0x7f0800c4" android:id="@+id/crop_image_menu_rotate_right" android:title="@string/crop_image_menu_rotate_right" app:showAsAction="ifRoom"/>
    <item android:icon="0x7f0800c2" android:id="@+id/crop_image_menu_flip" android:title="@string/crop_image_menu_flip" app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/crop_image_menu_flip_horizontally" android:title="@string/crop_image_menu_flip_horizontally"/>
            <item android:id="@+id/crop_image_menu_flip_vertically" android:title="@string/crop_image_menu_flip_vertically"/>
        </menu>
    </item>
    <item android:id="@+id/crop_image_menu_crop" android:title="@string/crop_image_menu_crop" app:showAsAction="always"/>
</menu>
