<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/ThemeOverlay.Zenly.Light" android:background="?attr/zenlyColorBackground" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <app.zenly.android.feature.polenta.widget.ScreenBarLayout android:id="@+id/screen_bar_layout" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <app.zenly.android.feature.polenta.widget.ScreenBar android:id="@+id/screen_bar" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/settings_blocked_title"/>
    </app.zenly.android.feature.polenta.widget.ScreenBarLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/list" android:scrollbars="vertical" android:clipToPadding="false" android:layout_width="0dp" android:layout_height="0dp" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/screen_bar_layout"/>
    <app.zenly.android.feature.polenta.widget.EmptyView android:id="@+id/blocked_users_empty" android:visibility="gone" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/screen_bar_layout" app:src="0x7f080388" app:subtitle="@string/settings_blocked_empty_subtitle" app:title="@string/settings_blocked_empty_title"/>
    <app.zenly.android.feature.polenta.widget.EmptyView android:id="@+id/blocked_users_failed" android:visibility="gone" android:layout_width="0dp" android:layout_height="0dp" app:actionText="@string/settings_blocked_loadingfail_button" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/screen_bar_layout" app:src="0x7f080389" app:subtitle="@string/settings_blocked_loadingfail_message" app:title="@string/settings_blocked_loadingfail_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>
