<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="?attr/zenlyColorBackground" android:layout_width="match_parent" android:layout_height="match_parent">
    <app.zenly.android.feature.polenta.widget.EmptyView android:id="@+id/view_dead_end" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" app:src="0x7f080389"/>
    <app.zenly.android.feature.polenta.widget.EmptyView android:id="@+id/view_update_needed" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" app:actionText="@string/playservices_troubleshooting_updateNeeded_cta" app:src="0x7f080225" app:subtitle="@string/playservices_troubleshooting_updateNeeded_message" app:title="@string/playservices_troubleshooting_updateNeeded_title"/>
</FrameLayout>
