<?xml version="1.0" encoding="utf-8"?>
<app.zenly.android.base.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/ThemeOverlay.Zenly.Light" android:orientation="vertical" android:background="?attr/zenlyColorBackground" android:focusable="true" android:clickable="true" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent">
    <app.zenly.android.feature.polenta.widget.ScreenBar android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/support_places_main_title"/>
    <app.zenly.android.feature.polenta.widget.EmptyView android:id="@+id/my_places_empty_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" app:actionText="@string/support_places_empty_button" app:src="0x7f08038d" app:subtitle="@string/support_places_empty_subtitle" app:title="@string/support_places_empty_title"/>
    <androidx.appcompat.widget.AppCompatTextView android:textAppearance="@style/TextAppearance.TertiaryBody" android:textColor="?attr/zenlyTextColorPrimary" android:textColorHighlight="?attr/zenlyTextColorSecondaryAccent" android:textColorLink="?attr/zenlyTextColorSecondary" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/my_places_subtitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_150" android:paddingStart="@dimen/spacing_200" android:paddingEnd="@dimen/spacing_200"/>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/my_places_recycler_view" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="@dimen/spacing_200" android:paddingEnd="@dimen/spacing_200" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</app.zenly.android.base.widget.LinearLayout>
