<?xml version="1.0" encoding="utf-8"?>
<app.zenly.android.base.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/ThemeOverlay.Zenly.Light" android:orientation="vertical" android:background="?attr/zenlyColorBackground" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <app.zenly.android.feature.polenta.widget.ScreenBarLayout android:id="@+id/screen_bar_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
        <app.zenly.android.feature.polenta.widget.ScreenBar android:id="@+id/screen_bar" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/settings_managenotifications_title_manage"/>
    </app.zenly.android.feature.polenta.widget.ScreenBarLayout>
    <androidx.core.widget.NestedScrollView android:id="@+id/scroll_view" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent">
        <app.zenly.android.base.widget.LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/friends_abroad_layout" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/ListItem">
                <TextView android:textAppearance="@style/TextAppearance.PrimaryBody" android:textColor="?attr/zenlyTextColorPrimary" android:id="@+id/title" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/settings_managenotifications_button_title_friendsabroad" android:layout_marginEnd="@dimen/spacing_100" app:layout_constraintBottom_toTopOf="@+id/subtitle" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="2"/>
                <TextView android:textAppearance="@style/TextAppearance.TertiaryBody" android:textColor="?attr/zenlyTextColorSecondary" android:id="@+id/subtitle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_50" android:text="@string/settings_managenotifications_button_subtitle_notifyfriendsabroad" android:layout_marginEnd="@dimen/spacing_100" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <app.zenly.locator.settings.view.SwitchMenuItem android:id="@+id/switch_menu_item" android:layout_width="match_parent" android:layout_height="wrap_content" app:switchDescription="@string/settings_managenotifications_button_notifycontacts" app:switchTitle="@string/settings_managenotifications_button_title_zenlycontacts" style="@style/ListItem"/>
        </app.zenly.android.base.widget.LinearLayout>
    </androidx.core.widget.NestedScrollView>
</app.zenly.android.base.widget.LinearLayout>
