<?xml version="1.0" encoding="utf-8"?>
<app.zenly.android.base.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/ThemeOverlay.Zenly.Light" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textAppearance="@style/TextAppearance.PrimaryBody" android:textColor="?attr/zenlyTextColorPrimary" android:ellipsize="end" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="@dimen/spacing_200" android:text="@string/z_track3exp1var1_dialog_subtitle_hangout" android:maxLines="2" android:drawablePadding="@dimen/spacing_150" android:drawableStart="0x7f08027d"/>
    <TextView android:textAppearance="@style/TextAppearance.PrimaryBody" android:textColor="?attr/zenlyTextColorPrimary" android:ellipsize="end" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="@dimen/spacing_200" android:text="@string/z_track3exp1var1_dialog_subtitle_battery" android:maxLines="2" android:drawablePadding="@dimen/spacing_150" android:drawableStart="0x7f08027c"/>
    <TextView android:textAppearance="@style/TextAppearance.PrimaryBody" android:textColor="?attr/zenlyTextColorPrimary" android:ellipsize="end" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="@dimen/spacing_200" android:text="@string/z_track3exp1var1_dialog_subtitle_tots" android:maxLines="2" android:drawablePadding="@dimen/spacing_150" android:drawableStart="0x7f08027f"/>
    <TextView android:textAppearance="@style/TextAppearance.PrimaryBody" android:textColor="?attr/zenlyTextColorPrimary" android:ellipsize="end" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/z_track3exp1var1_dialog_subtitle_speed" android:maxLines="2" android:drawablePadding="@dimen/spacing_150" android:drawableStart="0x7f08027e"/>
</app.zenly.android.base.widget.LinearLayout>
