<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/request_list_swipe_refresh_layout_empty" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.legacy.widget.Space android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <include layout="@layout/zs_activity_request_list_empty_logo"/>
        <TextView android:textSize="16sp" android:gravity="center" android:id="@+id/request_list_description_empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="64dp" android:layout_marginRight="64dp" android:text="@string/request_list_empty_text" android:layout_marginStart="64dp" android:layout_marginEnd="64dp"/>
        <Button android:id="@+id/request_list_empty_start_conversation" android:paddingLeft="16dp" android:paddingTop="10dp" android:paddingRight="16dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/request_list_empty_start_conversation" style="@style/ZendeskRequestListButton"/>
        <androidx.legacy.widget.Space android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <ImageView android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:id="@+id/request_list_zendesk_logo_empty" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24dp" android:src="0x7f080460" android:contentDescription="@string/zs_general_referrer_logo_label_accessibility"/>
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
