<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/ThemeOverlay.Zenly.Light" android:background="?attr/zenlyColorBackground" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <app.zenly.android.feature.polenta.widget.ScreenBar android:id="@+id/screen_bar" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:title="@string/support_deletion_confirmation_title"/>
    <androidx.appcompat.widget.AppCompatTextView android:textAppearance="@style/TextAppearance.Title" android:textColor="?attr/zenlyTextColorPrimary" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/subtitle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="@dimen/spacing_200" android:text="@string/support_deletion_confirmation_subtitle" app:layout_constraintBottom_toTopOf="@+id/description" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/screen_bar" app:layout_constraintVertical_chainStyle="2"/>
    <androidx.appcompat.widget.AppCompatTextView android:textAppearance="@style/TextAppearance.SecondaryBody" android:textColor="?attr/zenlyTextColorPrimary" android:textColorHighlight="?attr/zenlyTextColorSecondary" android:textColorLink="?attr/zenlyTextColorPrimary" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/description" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="@dimen/spacing_200" android:layout_marginEnd="@dimen/spacing_200" app:layout_constraintBottom_toTopOf="@+id/button_ok" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/subtitle"/>
    <TextView android:id="@+id/button_ok" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="@dimen/spacing_200" android:text="@string/support_deletion_confirmation_title_ok" app:layout_constraintBottom_toTopOf="@+id/button_cancel" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/Button.Large.Primary"/>
    <ProgressBar android:id="@+id/delete_progress" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@+id/button_ok" app:layout_constraintEnd_toEndOf="@+id/button_ok" app:layout_constraintStart_toStartOf="@+id/button_ok" app:layout_constraintTop_toTopOf="@+id/button_ok"/>
    <TextView android:id="@+id/button_cancel" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_200" android:text="@string/support_deletion_confirmation_title_ko" android:layout_marginStart="@dimen/spacing_200" android:layout_marginEnd="@dimen/spacing_200" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/Button.Large.Tertiary"/>
</androidx.constraintlayout.widget.ConstraintLayout>
