<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/ThemeOverlay.Polenta.Light" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="@style/TextAppearance.Subhead" android:id="@+id/title" android:padding="@dimen/spacing_200" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/mediapicker_all_photos" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.recyclerview.widget.RecyclerView android:orientation="vertical" android:id="@+id/recycler_view" android:clipToPadding="false" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title"/>
    <androidx.appcompat.widget.AppCompatImageView android:id="@+id/no_media_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_800" android:src="0x7f080331" android:translationX="@dimen/grid_size_650" app:layout_constraintBottom_toTopOf="@+id/bottom_inset" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/title" app:tint="@color/gray_light"/>
    <app.zenly.android.feature.polenta.widget.EmptyView android:id="@+id/need_permission_view" android:visibility="gone" android:layout_width="0dp" android:layout_height="0dp" app:actionText="@string/mediapicker_permission_storage_button" app:layout_constraintBottom_toTopOf="@+id/bottom_inset" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title" app:src="0x7f0803ca" app:subtitle="@string/mediapicker_permission_storage_message"/>
    <Space android:id="@+id/bottom_inset" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
